--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,10 @@
     	<artifactId>ccpp</artifactId>
     	<version>1.0</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-lang</groupId>
+    	<artifactId>commons-lang</artifactId>
+    	<version>2.6</version>
+    </dependency>
   </dependencies>
 </project>
