--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.portletguru</groupId>
@@ -53,7 +52,7 @@
   <scm>
   	<url>https://github.com/druglee/portlettester</url>
 	<connection>scm:git:git://github.com/druglee/portlettester.git</connection>
-	<developerConnection>scm:git:druglee@github.com/druglee/portlettester.git</developerConnection>
+	<developerConnection>scm:git://druglee@github.com/druglee/portlettester.git</developerConnection>
   </scm>
   <developers>
     <developer>
